--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   "dependencies": {
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "framer-motion": "^12.23.25",
+    "lucide-react": "^0.555.0",
     "next": "14.2.3",
+    "next-intl": "^4.5.8",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
